<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/campo_usuario_registro"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/campo_arredondado_login_registro"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_foto_registro" />

    <EditText
        android:id="@+id/campo_email_registro"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/campo_arredondado_login_registro"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/campo_usuario_registro"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/campo_usuario_registro"
        app:layout_constraintTop_toBottomOf="@+id/campo_usuario_registro" />

    <EditText
        android:id="@+id/campo_senha_registro"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/campo_arredondado_login_registro"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/campo_email_registro"
        app:layout_constraintStart_toStartOf="@+id/campo_email_registro"
        app:layout_constraintTop_toBottomOf="@+id/campo_email_registro" />

    <Button
        android:id="@+id/botao_registro"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/registro"
        android:textStyle="bold"
        android:background="@drawable/campo_arredondado_login_registro"
        app:layout_constraintEnd_toEndOf="@+id/campo_senha_registro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/campo_senha_registro"
        app:layout_constraintTop_toBottomOf="@+id/campo_senha_registro" />

    <TextView
        android:id="@+id/campo_ja_tem_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Já possui uma conta ?"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_700"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/botao_registro"
        app:layout_constraintStart_toStartOf="@+id/botao_registro"
        app:layout_constraintTop_toBottomOf="@+id/botao_registro" />

    <Button
        android:id="@+id/botao_foto_registro"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/botao_redondo"
        android:text="@string/escolha_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>